removed concurrent modification exception of getproject of emp by creating a copy of list and returning that and created a project assigning page for admin which renders live